pom-parser/src/snapshots/sums.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"1 + 1 + 1\")"
---
(
    Ast {
        items: [
            Id(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id(4),
                    ),
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Number(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Number(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 4,
                        end: 5,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id(0),
                        op: Add,
                        rhs: Id(1),
                    },
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                Expr {
                    kind: Number(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 8,
                        end: 9,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id(2),
                        op: Add,
                        rhs: Id(3),
                    },
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
            ],
        ),
    },
    [],
)
