pom-parser/src/snapshots/tuple-5.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"();\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Tuple(
                        [],
                    ),
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
