pom-parser/src/snapshots/unbalanced_paren-4.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"(;\")"
---
(
    Ast {
        items: [],
        stmts: Arena(
            [],
        ),
        exprs: Arena(
            [],
        ),
    },
    [
        Error {
            kind: UnexpectedToken {
                expected: [
                    Bool,
                    Float,
                    Ident,
                    Int,
                    LParen,
                ],
                got: Token {
                    kind: Semicolon,
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            },
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
