pom-parser/src/snapshots/unbalanced_paren-5.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"(\")"
---
(
    Ast {
        items: [],
        stmts: Arena(
            [],
        ),
        exprs: Arena(
            [],
        ),
    },
    [
        Error {
            kind: UnexpectedToken {
                expected: [
                    Bool,
                    Float,
                    Ident,
                    Int,
                    LParen,
                ],
                got: Token {
                    kind: Eof,
                    span: Span {
                        start: 4294967295,
                        end: 4294967295,
                    },
                },
            },
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
